--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,7 +22,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,9 +37,9 @@
             android:id="@+id/constraintLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="115dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="20dp"
             android:background="@drawable/home_search_round"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +51,9 @@
                 android:layout_marginStart="46dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                android:fontFamily="@font/nanum_barungothic_bold"
+                android:fontFamily="@font/nanum_barungothic_regular"
+                android:includeFontPadding="false"
+                android:textStyle="bold"
                 android:text="@string/home_search_hint"
                 android:textColor="@color/brown_grey"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -81,9 +82,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
             android:showDividers="middle"
-            android:divider="@drawable/empty_tall_divider">
+            android:divider="@drawable/empty_tall_divider"
+            android:paddingBottom="48dp">
 
 
         </LinearLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
