--- a/app/src/main/res/layout/rv_item_big_image_article.xml
+++ b/app/src/main/res/layout/rv_item_big_image_article.xml
@@ -13,22 +13,20 @@
             android:id="@+id/rv_big_image_article_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="20dp">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/rv_big_image_article_img"
                 android:layout_width="match_parent"
                 android:layout_height="169.8dp"
                 android:scaleType="centerCrop"
-                android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/top_round" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="20dp">
+                android:background="@drawable/back_transparent_round_card_grey">
 
                 <TextView
                     android:id="@+id/rv_big_image_article_txt"
@@ -36,8 +34,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="15dp"
-                    android:layout_marginLeft="22dp"
-                    android:layout_marginRight="22dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:textSize="15sp"
                     android:includeFontPadding="false"
                     android:fontFamily="@font/nanum_barungothic_light"
@@ -50,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
                     android:layout_below="@id/rv_big_image_article_txt"
-                    android:layout_marginLeft="22dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginBottom="15dp"
                     android:includeFontPadding="false"
                     android:text="brunch.co.kr"
