--- a/app/src/main/res/layout/activity_archive.xml
+++ b/app/src/main/res/layout/activity_archive.xml
@@ -4,7 +4,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="64dp"
         android:background="#ffffff">
 
         <TextView
@@ -13,6 +13,7 @@
             android:layout_height="wrap_content"
             android:text="UX 디자인"
             android:fontFamily="@font/nanum_barungothic_regular"
+            android:includeFontPadding="false"
             android:textSize="17sp"
             android:textColor="#000000"
             android:layout_centerInParent="true"/>
