--- a/app/src/main/res/layout/activity_artic_pick.xml
+++ b/app/src/main/res/layout/activity_artic_pick.xml
@@ -6,22 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.detail_artic_pick.ArticPickActivity">
+    tools:context=".ui.detail_artic_pick.ArticPickActivity"
+    android:background="@color/white">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:background="@color/white">
-        <ImageView
-            android:id="@+id/btn_toolbar_review_back"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginTop="17dp"
-            android:layout_marginLeft="20dp"
-            android:layout_alignParentLeft="true"
-            android:adjustViewBounds="true"
-            android:src="?attr/homeAsUpIndicator"
-            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,14 +21,23 @@
             android:textSize="17sp"
             android:textColor="@color/black"
             android:includeFontPadding="false"
-            android:fontFamily="@font/nanum_barungothic_bold"
+            android:fontFamily="@font/nanum_barungothic_regular"
+            android:lineSpacingExtra="2sp"
             android:text="@string/artic_pick_title"/>
     </RelativeLayout>
+    
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="#d1d1d1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_artic_pick"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
 
     </androidx.recyclerview.widget.RecyclerView>
