--- a/app/src/main/res/layout/activity_link.xml
+++ b/app/src/main/res/layout/activity_link.xml
@@ -16,9 +16,30 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include
-            android:id="@+id/toolbar_list"
-            layout="@layout/toolbar_list"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:background="@color/white">
+
+            <TextView
+                android:id="@+id/tv_act_link_archive_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="UX / UI"
+                android:textSize="17sp"
+                android:textColor="#000000"
+                android:lineSpacingExtra="2sp"
+                android:fontFamily="@font/nanum_barungothic_regular"
+                android:includeFontPadding="false"/>
+
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.3dp"
+            android:background="#d1d1d1"/>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,10 +60,15 @@
             android:includeFontPadding="false"
             android:text="PM과 디자이너가 원활하게 소통하는 법을 알려주세요"
             />
-            <ImageView
+
+            <ToggleButton
                 android:id="@+id/link_btn_scrap"
-                android:layout_width="23.5dp"
-                android:layout_height="23.5dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@drawable/toggle_btn_scrap"
+                android:textOff=""
+                android:textOn=""
+                android:checked="true"
                 android:layout_marginTop="34dp"
                 android:layout_marginRight="19.5dp"
                 android:src="@drawable/btn_scrap_blue"
