--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,61 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.login.LoginActivity">
-
-    <RelativeLayout
-        android:id="@+id/relative_login_top_bar"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/tv_login_complete_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:background="#00ffffff"
-            android:fontFamily="@font/nanum_barungothic_regular"
-            android:includeFontPadding="false"
-            android:paddingLeft="20dp"
-            android:paddingTop="10dp"
-            android:paddingRight="20dp"
-            android:paddingBottom="10dp"
-            android:text="완료"
-            android:textColor="#cdcdcd"
-            android:textSize="17sp" />
-
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.3dp"
-        android:background="#d1d1d1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relative_login_top_bar" />
+    tools:context=".ui.login.login.LoginActivity"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="120dp"
         android:src="@drawable/artic_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relative_login_top_bar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linear_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="83dp"
+        android:layout_marginTop="53dp"
         android:layout_marginEnd="36dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,6 +44,7 @@
             android:id="@+id/et_login_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:hint="artic@gmail.com"
             android:textSize="14sp"
             android:textColor="#000000"
@@ -89,10 +56,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="55dp"
         android:layout_marginEnd="36dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,15 +80,33 @@
             android:id="@+id/et_login_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="영문, 숫자 포함 8 자리 이상"
-            android:textSize="14sp"
-            android:textColor="#707070"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/nanum_barungothic_regular"
+            android:hint="영문, 숫자 포함 8 자리 이상"
             android:includeFontPadding="false"
+            android:inputType="textPassword"
             android:lineSpacingExtra="2sp"
-            android:theme="@style/EditTheme"
-            android:inputType="textPassword"/>
+            android:textColor="#707070"
+            android:textSize="14sp"
+            android:theme="@style/EditTheme" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_login_complete"
+        android:layout_width="match_parent"
+        android:layout_height="37dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        android:background="@drawable/btn_blue_round"
+        android:text="로그인"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        android:fontFamily="@font/nanum_barungothic_regular"
+        android:includeFontPadding="false"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
