--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -33,7 +33,8 @@
             android:text="무엇을"
             android:textSize="21sp"
             android:textColor="#000000"
-            android:fontFamily="@font/nanum_barungothic_light"/>
+            android:fontFamily="@font/nanum_barungothic_light"
+            android:includeFontPadding="false"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,7 +42,10 @@
             android:text="찾고 계신가요?"
             android:textSize="21sp"
             android:textColor="#000000"
-            android:fontFamily="@font/nanum_barungothic_bold"/>
+            android:fontFamily="@font/nanum_barungothic_regular"
+            android:textStyle="bold"
+            android:includeFontPadding="false"
+            android:layout_marginTop="8dp"/>
 
     </LinearLayout>
 
@@ -100,7 +104,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginLeft="22dp"
         android:layout_marginRight="20dp">
 
 
