--- a/app/src/main/res/layout/activity_signup_private.xml
+++ b/app/src/main/res/layout/activity_signup_private.xml
@@ -6,84 +6,93 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="20dp"
-    tools:context=".ui.signup.signup.SignupPrivateActivity">
+    tools:context=".ui.signup.signup.SignupPrivateActivity"
+    android:background="@color/white">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="56dp">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="?attr/homeAsUpIndicator"
-            android:layout_marginTop="53dp"
-            />
         <TextView
             android:id="@+id/signup_private_done_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:fontFamily="@font/nanumbarungothic"
+            android:fontFamily="@font/nanum_barungothic_regular"
             android:textColor="#cdcdcd"
             android:includeFontPadding="false"
             android:textSize="17sp"
-            android:layout_marginTop="53dp"
             android:layout_marginRight="20dp"
-            android:text="완료"/>
+            android:text="완료"
+            android:layout_centerVertical="true"/>
+
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="#d1d1d1"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="43dp"
         android:paddingRight="170dp"
-        android:paddingBottom="74dp">
+        android:paddingBottom="74dp"
+        android:paddingLeft="20dp">
+
         <TextView
             android:id="@+id/name_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="이름"
+            android:fontFamily="@font/nanum_barungothic_regular"
             android:includeFontPadding="false"
-            android:fontFamily="@font/nanumbarungothicbold"
+            android:textStyle="bold"
             android:textColor="@color/black"
-            android:textSize="21sp"
-            />
+            android:textSize="21sp" />
+
         <TextView
             android:id="@+id/signup_txt1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="과 "
+            android:fontFamily="@font/nanum_barungothic_light"
             android:includeFontPadding="false"
-            android:fontFamily="@font/nanumbarungothiclight"
             android:textSize="21sp"
             android:textColor="@color/black"
             android:layout_toRightOf="@id/name_txt"/>
+
         <TextView
             android:id="@+id/birth_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="생년월일"
+            android:fontFamily="@font/nanum_barungothic_regular"
             android:includeFontPadding="false"
-            android:fontFamily="@font/nanumbarungothicbold"
+            android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="21sp"
             android:layout_toRightOf="@id/signup_txt1"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/birth_txt"
+            android:fontFamily="@font/nanum_barungothic_light"
             android:includeFontPadding="false"
-            android:fontFamily="@font/nanumbarungothiclight"
             android:textSize="21sp"
             android:textColor="@color/black"
             android:text="을"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/name_txt"
+            android:layout_marginTop="8dp"
             android:text="알려주세요!"
+            android:fontFamily="@font/nanum_barungothic_light"
             android:includeFontPadding="false"
-            android:fontFamily="@font/nanumbarungothiclight"
             android:textSize="21sp"
             android:textColor="@color/black"/>
 
@@ -95,14 +104,21 @@
         android:includeFontPadding="false"
         android:fontFamily="@font/nanum_barungothic_regular"
         android:textColor="@color/black"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:layout_marginLeft="20dp"/>
     <EditText
         android:id="@+id/et_act_signup_private_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="36dp"
-        android:hint="김아틱"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:hint="김아틱"
+        android:layout_marginLeft="20dp"
+        android:lineSpacingExtra="2sp"
+        android:theme="@style/EditTheme"
+        android:textSize="14sp"
+        android:fontFamily="@font/nanum_barungothic_light"
+        android:includeFontPadding="false"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -112,15 +128,22 @@
         android:layout_marginTop="54dp"
         android:fontFamily="@font/nanum_barungothic_regular"
         android:textColor="@color/black"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:layout_marginLeft="20dp"/>
 
     <EditText
         android:id="@+id/et_act_signup_private_birth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="36dp"
-        android:layout_marginTop="10dp"
-        android:hint="YY MM DD"/>
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:hint="YY MM DD"
+        android:layout_marginLeft="20dp"
+        android:lineSpacingExtra="2sp"
+        android:theme="@style/EditTheme"
+        android:textSize="14sp"
+        android:fontFamily="@font/nanum_barungothic_light"
+        android:includeFontPadding="false"/>
 
 
 </LinearLayout>
