--- a/app/src/main/res/layout/fragment_home_artic_pick.xml
+++ b/app/src/main/res/layout/fragment_home_artic_pick.xml
@@ -13,9 +13,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="아틱의 선택"
-            android:fontFamily="@font/nanum_barungothic_bold"
+            android:fontFamily="@font/nanum_barungothic_regular"
+            android:includeFontPadding="false"
+            android:textStyle="bold"
             android:textSize="18sp"
-            android:textColor="#191919"/>
+            android:textColor="#191919"
+            android:layout_gravity="center_vertical"/>
 
         <ImageView
             android:layout_width="wrap_content"
@@ -28,7 +31,7 @@
         android:id="@+id/rv_frag_home_artic_pick"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="15dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
