--- a/app/src/main/res/layout/fragment_home_new_article.xml
+++ b/app/src/main/res/layout/fragment_home_new_article.xml
@@ -13,9 +13,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="새로운 아티클"
-            android:fontFamily="@font/nanum_barungothic_bold"
+            android:fontFamily="@font/nanum_barungothic_regular"
+            android:includeFontPadding="false"
+            android:textStyle="bold"
             android:textSize="18sp"
-            android:textColor="#191919"/>
+            android:textColor="#191919"
+            android:layout_gravity="center_vertical"/>
 
         <ImageView
             android:layout_width="wrap_content"
