--- a/app/src/main/res/layout/rv_item_archive_card.xml
+++ b/app/src/main/res/layout/rv_item_archive_card.xml
@@ -5,9 +5,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
-        android:layout_margin="5dp"
         android:layout_width="177dp"
-        android:layout_height="239dp">
+        android:layout_height="239dp"
+        app:cardCornerRadius="6dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container_rv_item_archive_card"
@@ -18,10 +18,6 @@
                 android:id="@+id/img_rv_item_archive_card_backgound"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
                 android:background="@drawable/archive_card_round"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -34,9 +30,9 @@
                 android:id="@+id/txt_rv_item_archive_card_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="17dp"
-                android:layout_marginTop="15dp"
-                android:fontFamily="@font/gilroyextrabold"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="13dp"
+                android:fontFamily="@font/avenir_next_bold"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,10 +43,11 @@
                 android:id="@+id/txt_rv_item_archive_card_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="14dp"
-                android:layout_marginEnd="38dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="36dp"
                 android:layout_marginBottom="17dp"
-                android:fontFamily="@font/nanumbarungothiclight"
+                android:fontFamily="@font/nanum_barungothic_regular"
+                android:includeFontPadding="false"
                 android:lineSpacingExtra="6sp"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
