--- a/app/src/main/res/layout/rv_item_category.xml
+++ b/app/src/main/res/layout/rv_item_category.xml
@@ -7,11 +7,9 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <!-- TODO 폰트가 변경되어서 19.7.4에 수정이 필요 -->
     <TextView
         android:id="@+id/txt_rv_item_category_name"
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="13dp"
@@ -21,5 +19,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="Design" />
+        android:text="Design"
+        android:fontFamily="@font/avenir_next_bold"
+        android:includeFontPadding="false"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
