--- a/app/src/main/res/layout/rv_item_reading_history.xml
+++ b/app/src/main/res/layout/rv_item_reading_history.xml
@@ -25,7 +25,10 @@
             android:layout_marginTop="15dp"
             android:textColor="#aaaaaa"
             android:fontFamily="@font/nanum_barungothic_regular"
-            />
+            android:layout_toStartOf="@id/rv_reading_history_img"
+            android:layout_marginRight="80dp"
+            android:ellipsize="end"
+            android:maxLines="1"/>
 
         <TextView
             android:id="@+id/rv_reading_history_title"
@@ -35,11 +38,11 @@
             android:layout_toStartOf="@id/rv_reading_history_img"
             android:layout_alignStart="@id/rv_reading_history_url"
             android:layout_marginTop="8dp"
-
             android:fontFamily="@font/nanum_barungothic_light"
             android:layout_marginRight="45dp"
             android:textColor="@color/black"
             android:layout_alignParentLeft="true"
+            android:lineSpacingExtra="6sp"
             android:includeFontPadding="false"
             android:textSize="14sp"
             android:text="제품 디자이너는 코딩에 대해 잊어야 합니다."/>
