--- a/app/src/main/res/layout/activity_artic_pick.xml
+++ b/app/src/main/res/layout/activity_artic_pick.xml
@@ -27,11 +27,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="17sp"
-            android:textColor="@color/black"
+            android:fontFamily="@font/nanum_barungothic_regular"
             android:includeFontPadding="false"
-            android:fontFamily="@font/nanum_barungothic_bold"
-            android:text="@string/artic_pick_title"/>
+            android:text="@string/artic_pick_title"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
