--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -10,24 +10,20 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="64dp"
         android:background="@color/white">
-        <ImageView
-            android:id="@+id/btn_toolbar_review_back"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="19dp"
-            android:layout_alignParentLeft="true"
-            android:adjustViewBounds="true"
-            android:src="?attr/homeAsUpIndicator"
-            />
+        
     </RelativeLayout>
+    
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="#d1d1d1"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:paddingBottom="20dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="22dp"
         android:background="@color/white">
 
     <TextView
@@ -37,19 +33,21 @@
         android:text="디자인"
         android:includeFontPadding="false"
         android:textColor="@color/black"
-        android:fontFamily="@font/nanumbarungothicbold"
+        android:fontFamily="@font/nanum_barungothic_regular"
+        android:textStyle="bold"
         android:textSize="21sp"
         android:layout_marginTop="28dp"
-        android:layout_marginLeft="19dp" />
+        android:layout_marginLeft="20dp" />
      <TextView
          android:id="@+id/search_result_number"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="32"
-         android:layout_marginLeft="19dp"
+         android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:includeFontPadding="false"
-         android:fontFamily="@font/nanum_square_bold"
+         android:fontFamily="@font/nanum_square_regular"
+         android:textStyle="bold"
          android:layout_below="@id/search_result_category_name"
          android:textColor="@color/soft_blue"/>
 
@@ -70,9 +68,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         app:tabGravity="fill"
-        app:tabMode="fixed"
-
-        />
+        app:tabMode="fixed"/>
     
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/search_result_viewpager"
