--- a/app/src/main/res/layout/rv_search_recommend_card.xml
+++ b/app/src/main/res/layout/rv_search_recommend_card.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
     android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/search_search_word_card"
-    android:paddingTop="13dp" android:paddingBottom="13dp" android:paddingRight="18dp" android:paddingLeft="18dp">
+    android:id="@+id/linear_rv_search_recommend_card">
 
     <TextView
         android:id="@+id/tv_search_card_title"
@@ -10,7 +10,11 @@
         android:text="UI/UX 디자인"
         android:textColor="#707070"
         android:textSize="14sp"
-        android:fontFamily="@font/nanum_barungothic_regular"/>
+        android:fontFamily="@font/nanum_barungothic_regular"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="13dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"/>
 
 
 </LinearLayout>
