--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -17,7 +17,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         android:background="@color/white">
 
         <TextView
@@ -25,25 +25,29 @@
             android:layout_height="wrap_content"
             android:text="artic"
             android:fontFamily="@font/nanum_barungothic_regular"
+            android:includeFontPadding="false"
             android:textColor="@color/black"
             android:textSize="17sp"
-            android:layout_marginVertical="13dp"
-            android:layout_centerInParent="true"
-            />
+            android:layout_centerInParent="true" />
 
         <ImageButton
             android:layout_width="21dp"
             android:layout_height="21dp"
             android:background="@drawable/btn_setting"
             android:layout_alignParentRight="true"
-            android:layout_marginVertical="12dp"
             android:layout_marginRight="25dp"
-            android:layout_marginLeft="25dp"/>
+            android:layout_centerVertical="true"/>
 
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="#d1d1d1"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="130dp"
         android:background="@color/white"
         android:paddingLeft="20dp"
         >
@@ -90,9 +94,7 @@
     android:background="@color/very_light_pink">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingTop="25dp"
+        android:layout_height="93dp"
         android:paddingBottom="30dp"
         android:background="@color/white"
         >
@@ -106,7 +108,7 @@
             android:textColor="@color/black"
             android:textSize="13sp"
             android:includeFontPadding="false"
-
+            android:layout_marginLeft="20dp"
             />
         <TextView
             android:id="@+id/my_introduce_txt"
@@ -120,7 +122,10 @@
             android:textColor="@color/black"
             android:includeFontPadding="false"
             android:layout_marginRight="72dp"
-            android:text="저는 10년 동안 유엑스에 매진하였고, 총 3번의 아카데미를 수료한 경험이 있습니다."/>
+            android:text="저는 10년 동안 유엑스에 매진하였고, 총 3번의 아카데미를 수료한 경험이 있습니다."
+            android:layout_marginLeft="20dp"
+            android:ellipsize="end"
+            android:maxLines="2"/>
 
     </RelativeLayout>
 
@@ -131,44 +136,51 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="12dp"
         android:background="@color/white"
-        >
+        android:gravity="center_vertical">
 
         <RelativeLayout
             android:id="@+id/mypage_tab_scrap"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp">
 
+            <TextView
+                android:id="@+id/tv_act_my_page_scrap"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="스크랩"
-                android:layout_marginLeft="20dp"
                 android:fontFamily="@font/nanum_barungothic_bold"
                 android:textSize="14sp"
                 android:textColor="@color/soft_blue"
                 android:includeFontPadding="false"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/dot"
+                android:layout_toRightOf="@id/tv_act_my_page_scrap"
+                android:layout_marginLeft="2dp"/>
 
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/mypage_tab_me"
             android:layout_width="wrap_content"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
-            <TextView
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp">
 
+            <TextView
+                android:id="@+id/tv_act_my_page_me"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="나"
-                android:layout_marginLeft="20dp"
-                android:includeFontPadding="false"
-                android:textColor="@color/black"
-                android:textSize="14sp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="0dp"
                 android:fontFamily="@font/nanum_barungothic_regular"
-                />
+                android:includeFontPadding="false"
+                android:text="나"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
 
         </RelativeLayout>
 
