--- a/app/src/main/res/layout/activity_article_about.xml
+++ b/app/src/main/res/layout/activity_article_about.xml
@@ -81,6 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
                 android:layout_marginTop="21dp"
                 android:fontFamily="@font/nanum_barungothic_regular"
                 android:includeFontPadding="false"
