--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,9 @@
             android:fontFamily="@font/nanum_barungothic_regular"
             android:includeFontPadding="false"
             android:lineSpacingExtra="2sp"
-            android:theme="@style/EditTheme"/>
+            android:theme="@style/EditTheme"
+            android:singleLine ="true"
+            android:nextFocusDown="@id/et_login_password"/>
 
     </LinearLayout>
 
@@ -88,7 +90,8 @@
             android:lineSpacingExtra="2sp"
             android:textColor="#707070"
             android:textSize="14sp"
-            android:theme="@style/EditTheme" />
+            android:theme="@style/EditTheme"
+            android:singleLine ="true"/>
 
     </LinearLayout>
 
@@ -102,7 +105,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        android:background="@drawable/btn_blue_round"
+        android:background="@drawable/btn_login"
         android:text="로그인"
         android:textColor="@color/white"
         android:textSize="14sp"
