--- a/app/src/main/res/layout/activity_signup_login.xml
+++ b/app/src/main/res/layout/activity_signup_login.xml
@@ -113,14 +113,46 @@
         android:textSize="14sp"
         android:fontFamily="@font/nanum_barungothic_light"
         android:includeFontPadding="false"
-        android:lineSpacingExtra="2sp"/>
+        android:lineSpacingExtra="2sp"
+        android:singleLine ="true"
+        android:nextFocusDown="@id/signup_login_edit_password"/>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp">
+
+        <TextView
+            android:id="@+id/tv_act_signup_login_email_check_success"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사용하실 수 있는 이메일입니다"
+            android:textSize="12sp"
+            android:textColor="@color/soft_blue"
+            android:fontFamily="@font/nanum_barungothic_light"
+            android:includeFontPadding="false"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/tv_act_signup_login_email_check_fail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이메일 형식에 맞게 입력하세요"
+            android:textSize="12sp"
+            android:textColor="#ff1515"
+            android:fontFamily="@font/nanum_barungothic_light"
+            android:includeFontPadding="false"/>
+
+    </RelativeLayout>
+
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비밀번호"
         android:includeFontPadding="false"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/nanumbarungothic"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -139,7 +171,39 @@
         android:textSize="14sp"
         android:fontFamily="@font/nanum_barungothic_light"
         android:includeFontPadding="false"
-        android:lineSpacingExtra="2sp"/>
+        android:lineSpacingExtra="2sp"
+        android:singleLine ="true" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp">
+
+        <TextView
+            android:id="@+id/tv_act_signup_login_password_check_success"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사용하실 수 있는 형식입니다"
+            android:textSize="12sp"
+            android:textColor="@color/soft_blue"
+            android:fontFamily="@font/nanum_barungothic_light"
+            android:includeFontPadding="false"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/tv_act_signup_login_password_check_fail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="영문, 숫자 포함 8자리 이상의 비밀번호를 입력하세요"
+            android:textSize="12sp"
+            android:textColor="#ff1515"
+            android:fontFamily="@font/nanum_barungothic_light"
+            android:includeFontPadding="false"
+            android:visibility="visible"/>
+
+    </RelativeLayout>
+
+
 
 
 </LinearLayout>
