--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.category.CategoryActivity">
+    tools:context=".ui.category.CategoryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_category"
@@ -21,11 +21,4 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <include
-        layout="@layout/bottom_navigation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/rv_category"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
